llm configuration setup

--- a/.env
+++ b/.env
@@ -4,3 +4,9 @@ GOOGLE_PAGESPEED_INSIGHTS_API_KEY=AIzaSyArVMl8b5Ey2yRTlqGZVue6aphiIADK2Mo
 # RUM API Server
 RUM_ENDPOINT=https://bundles.aem.page/bundles
 ```
+
+
+AZURE_OPENAI_API_DEPLOYMENT_NAME=gpt-4o
+AZURE_OPENAI_API_INSTANCE_NAME=aem-sites-1-genai-us-east-2
+AZURE_OPENAI_API_KEY=a32a817592b34f5198295e80367efdd3
+AZURE_OPENAI_API_VERSION=2024-02-01
