--- a/package.json
+++ b/package.json
@@ -26,11 +26,13 @@
   "homepage": "https://github.com/MarquiseRosier/regression-tester#readme",
   "dependencies": {
     "@adobe/rum-distiller": "^1.16.3",
+    "axios": "^1.10.0",
     "chrome-launcher": "^1.2.0",
     "dotenv": "^16.5.0",
     "js-tiktoken": "^1.0.20",
     "langchain": "^0.3.29",
     "lighthouse": "^12.6.1",
+    "node-fetch": "^3.3.2",
     "psi": "^4.1.0",
     "yargs": "^18.0.0"
   }
