--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
   "homepage": "https://github.com/MarquiseRosier/regression-tester#readme",
   "dependencies": {
     "@adobe/rum-distiller": "^1.16.3",
+    "@google/generative-ai": "^0.24.1",
+    "@langchain/openai": "^0.5.15",
     "axios": "^1.10.0",
     "chrome-launcher": "^1.2.0",
     "dotenv": "^16.5.0",
