--- a/.env
+++ b/.env
@@ -1,6 +1,9 @@
 GOOGLE_CRUX_API_KEY=AIzaSyArVMl8b5Ey2yRTlqGZVue6aphiIADK2Mo
 GOOGLE_PAGESPEED_INSIGHTS_API_KEY=AIzaSyArVMl8b5Ey2yRTlqGZVue6aphiIADK2Mo
 
-# RUM API Server
-RUM_ENDPOINT=https://bundles.aem.page/bundles
-```
+
+
+SELECTED_MODEL=gemini
+# Gemini Models
+GOOGLE_API_KEY=AIzaSyArVMl8b5Ey2yRTlqGZVue6aphiIADK2Mo
+GEMINI_MODEL=gemini-2.0-flash
