--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "homepage": "https://github.com/MarquiseRosier/regression-tester#readme",
   "dependencies": {
     "@adobe/rum-distiller": "^1.16.3",
+    "@google/generative-ai": "^0.24.1",
     "chrome-launcher": "^1.2.0",
     "dotenv": "^16.5.0",
     "lighthouse": "^12.6.1",
